bk_ida/gccida/c3/c_readstr
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_readstr/src/builtins.c:783:34: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  c_readstr( const char *str, machine_mode mode) 
                                 ^
                                 enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_readstr/src/builtins.c:788:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+24h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_readstr/src/builtins.c:793:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_readstr/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_readstr/src/obj/builtins.o] Error 1
